src/test/ui/macros/unknown-builtin.stderr
error: cannot find a built-in macro with name `unknown`
  --> $DIR/unknown-builtin.rs:6:1
   |
LL | macro_rules! unknown { () => () }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot find a built-in macro with name `line`
  --> <::core::macros::builtin::line macros>:1:1
   |
LL | () => { } ;
   | ^^^^^^^^^^^

error: aborting due to 2 previous errors

